--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,10 @@ dependencies:
   meta: ^1.1.8
   quiver: ^3.0.1
   path_provider: ^2.0.1
-  tflite_flutter: ^0.9.0
+  tflite_flutter: # ^0.9.0 # custom ml neural networks
+    git:
+      url: https://github.com/Sankyuubigan/tflite_flutter_plugin.git
+      ref: 5b26cd9dec9e2347e9c7d6684017100fee26af31
   tuple: ^2.0.0
   camera: ^0.8.1+3
   ffi: ^1.0.0
